<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE9B1"
    tools:context=".Register">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:id="@+id/text"
        />

    <Button
        android:layout_below="@id/text"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:ems="5"
        android:padding="10dp"
        android:text="@string/login"
        android:theme="@style/MyButton"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="5"
        android:theme="@style/MyButton"
        android:padding="10dp"
        android:text="@string/register"
        android:textStyle="bold" />

</RelativeLayout>